Tambah activity barang

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ListApp">
+        <activity android:name=".BarangActivity">
+        </activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
